--- a/open data/Properties/Resources.resx
+++ b/open data/Properties/Resources.resx
@@ -118,22 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Immagine 2024-10-29 1646393333" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Immagine 2024-10-29 1646393333.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Immagine 2024-10-29 164639333" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Immagine 2024-10-29 164639333.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="images3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\images3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Immagine 2024-10-29 1646393" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Immagine 2024-10-29 1646393.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Immagine 2024-10-29 164639333" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Immagine 2024-10-29 164639333.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Immagine 2024-10-29 16463933" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Immagine 2024-10-29 16463933.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Immagine 2024-10-29 164639" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Immagine 2024-10-29 164639.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Immagine 2024-10-29 16463933" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Immagine 2024-10-29 16463933.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Immagine 2024-10-29 1646393333" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Immagine 2024-10-29 1646393333.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="3ee52660-8376-4406-b363-ed11359d48f1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3ee52660-8376-4406-b363-ed11359d48f1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
